Make application name configurable
